poddummy/src/main/devops/deployment-podgateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-poddummy
  labels:
    deploy: experimental
    category: networkPolicies
spec:
  selector:
    matchLabels:
      app: poddummy
      type: experimental-network
  template:
    metadata:
      name: eureka-main-svc
      labels:
        app: poddummy
        type: experimental-network
    spec:
      containers:
        - name: gateway-container
          image: peterzinho16/podgateway:v1
          imagePullPolicy: IfNotPresent
  replicas: 1
  strategy:
    type: RollingUpdate
