poddummy/src/main/devops/service-loadbalancer-podgateway.yml
apiVersion: v1
kind: Service
metadata:
  name: poddummy-service
  labels:
    service: experimental
    category: networkPolicies
spec:
  type: LoadBalancer
  ports:
    - targetPort: 8080
      port: 8081
  selector:
    app: poddummy
    type: experimental-network
