poddummy/src/main/devops/networkpolicy-poddummy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-poddummy
  labels:
    networkpolicy: experimental
    category: networkpolicy
spec:
  podSelector:
    matchLabels:
      app: poddummy
      type: experimental-network
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: podservice
              type: experimental-network
      ports:
        - port: 80
          protocol: TCP
  policyTypes:
  - Egress
